# jaffle-shop-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  ADDING_NEW_SOURCES.md  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE_PROCESS.md  TUTORIAL.md  coverage.xml  customers.csv  dev-requirements.in  dev-requirements.txt  github-manifest.yaml  lefthook.yaml  light-expense-management-manifest.yaml  light-openapi.json  pagerduty-simple-manifest.yaml  plaid-airbyte-manifest.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.txt  sample-airbyte-spec.json  setup.py  simple-github-manifest.yaml  stripe-airbyte-connector.json  wordpress-simple-manifest.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  main.yml  nightly.yml  pr_checks.yml  publish.yml  release.yml
.kiro/specs/fix-ci-tests/: design.md  requirements.md  tasks.md
.kiro/specs/schema-driven-data-generation/: design.md  requirements.md  tasks.md
.lefthook/commit-msg/: template-checker
airflow/: README.md  docker-compose.override.yml  setup_airflow_variables.py
airflow/dags/: jafgen_airbyte_import.py  jafgen_multi_api_weekly.py  jafgen_stripe_daily.py
data/: customers.csv  stores.csv
docs/: AIRFLOW_INTEGRATION.md  API_TEST_RESULTS.md  Makefile  github-api-results.md  light-api-results.md  pagerduty-api-results.md  plaid-api-results.md  stripe-api-results.md  wordpress-api-results.md
docs/source/: conf.py  index.rst  installation.md
examples/: README.md  banking.yaml  e-commerce.yaml  iot-sensors.yaml  multi-format.yaml  simple-users.yaml  social-network.yaml
jafgen/: __init__.py  cli.py  curves.py  main.py  simulation.py  time.py
jafgen/airbyte/: __init__.py  translator.py
jafgen/customers/: customer.py  customers.py  order.py  order_id.py  order_item.py  tweet.py
jafgen/flowers/: generator.py  inventory.py  models.py
jafgen/generation/: __init__.py  data_generator.py  exceptions.py  interfaces.py  link_resolver.py  mimesis_engine.py  models.py
jafgen/output/: __init__.py  csv_writer.py  duckdb_writer.py  exceptions.py  interfaces.py  json_writer.py  output_manager.py  parquet_writer.py
jafgen/schema/: __init__.py  constants.py  discovery.py  exceptions.py  interfaces.py  models.py  yaml_loader.py
jafgen/stores/: inventory.py  item.py  market.py  product.py  stock.py  store.py  supply.py
light-output/: card_transactions.csv  cards.csv  expenses.csv  invoices.csv  vendors.csv
plaid-output/: accounts.csv  holdings.csv  institutions.csv  investment_transactions.csv  securities.csv  transactions.csv
schemas/saas-templates/: README.md
schemas/saas-templates/hubspot/: companies.yaml  contacts.yaml  deals.yaml
schemas/saas-templates/huntr/: activities.yaml  contacts.yaml  jobs.yaml
schemas/saas-templates/light/: cards-and-transactions.yaml  expenses-and-vendors.yaml
schemas/saas-templates/plaid/: accounts.yaml  institutions.yaml  investments.yaml  transactions.yaml
schemas/saas-templates/salesforce/: accounts.yaml  contacts.yaml  opportunities.yaml
schemas/saas-templates/stripe/: charges.yaml  customers.yaml  subscriptions.yaml
schemas/saas-templates/xero/: customers.yaml  invoices.yaml  payments.yaml
scripts/: prepare_changelog.py  release.sh  test.sh
specs/001-fix-github-ci-cd/: plan.md  research.md  spec.md  tasks.md
specs/001-fix-github-ci-cd/checklists/: requirements.md
src/: curves.py  simulation.py
src/customers/: customers.py  order.py
src/stores/: inventory.py  item.py  market.py  stock.py
test-output/: users.csv
tests/: conftest.py  test_airbyte_integration.py  test_airbyte_translator.py  test_cli_generate.py  test_cli_import_airbyte.py  test_cli_validate_list.py  test_csv_writer.py  test_data_generator.py  test_data_generator_integration.py  test_days.py  test_duckdb_writer.py  test_end_to_end_integration.py  test_idempotency_verification.py  test_idempotent_generation.py  test_interfaces.py  test_inventory.py  test_json_writer.py  test_link_resolver.py  test_mimesis_engine.py  test_order_totals.py  test_output_manager.py  test_parquet_writer.py  test_performance.py  test_saas_templates.py  test_schema_constants.py  test_schema_discovery.py  test_schema_driven_output.py  test_simulation.py  test_tweets.py  test_yaml_loader.py
tests/fixtures/: __init__.py
tests/fixtures/schemas/invalid/: circular-dependency.yaml  missing-required.yaml  syntax-error.yaml
tests/fixtures/schemas/valid/: linked-entities.yaml  simple-users.yaml
