[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jafgen"
version = "0.4.14"
authors = [{ name = "gwenwindflower", email = "gwenwindflower@gmail.com" }]
dependencies = [
    "numpy", 
    "Faker", 
    "typer",
    "mimesis>=11.0.0",
    "PyYAML>=6.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "rich>=13.0.0"
]
description = "A synthetic data generator CLI for a fictional Jaffle Shop"
readme = "README.md"
license = { file = "LICENSE" }
[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[project.scripts]
jafgen = "jafgen.cli:app"

[project.optional-dependencies]
dev = [
    "ruff", 
    "pytest",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0"
]

[tool.ruff.lint]
select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "W",   # Whitespace
  "D",   # Pydocs
  "T20", # Print statements
  "I",   # isort
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM",
    "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]

[tool.pydocstyle]
convention = "google"
