[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jafgen"
version = "0.4.14"
authors = [{ name = "gwenwindflower", email = "gwenwindflower@gmail.com" }]
dependencies = [
    "numpy", 
    "Faker", 
    "typer",
    "mimesis>=11.0.0",
    "PyYAML>=6.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "rich>=13.0.0"
]
description = "A synthetic data generator CLI for a fictional Jaffle Shop"
readme = "README.md"
license = { file = "LICENSE" }
[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[project.scripts]
jafgen = "jafgen.cli:app"

[project.optional-dependencies]
dev = [
    "ruff", 
    "pytest",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0"
]

[tool.ruff.lint]
select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "W",   # Whitespace
  "D",   # Pydocs
  "T20", # Print statements
  "I",   # isort
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM",
    "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]

[tool.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["jafgen"]
known_third_party = ["mimesis", "typer", "yaml", "pyarrow", "duckdb", "rich"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "mimesis.*",
    "pyarrow.*",
    "duckdb.*",
    "yaml.*"
]
ignore_missing_imports = true
